--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <section class="jumbotron text-center" >
-        <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード</strong></h1>
+        <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード - 只今工事中</strong></h1>
         <p class="text-muted"><strong>Heppocode running</strong></p>
         <p><a type="button" class="btn btn-success btn-lg" href="stages/"><strong>スタート</strong></a></p>
     </section>
