--- a/stages/index.html
+++ b/stages/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Yutaka Kachi">
 
-    <title>Stage / Heppocode running</title>
+    <title>デモコース / Heppocode running</title>
 
     <!-- CSS -->
     <link href="../lib/bootstrap/4.0.0_b2/css/bootstrap.min.css" rel="stylesheet">
@@ -19,14 +19,14 @@
 
 <body>
     <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#"><strong>はしれ！ヘッポコード</strong></a>
+        <a class="navbar-brand" href=".."><strong>はしれ！ヘッポコード</strong></a>
     </nav>
     <div class="container">
         <div class="grid">
             <div class="col_12">
                 <h1>ステージ：</h1>
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="test_20">マニュアル プレイ</a></li>
+                    <li class="list-group-item"><a href="test_20">マニュアル ドライブ</a></li>
                     <li class="list-group-item"><a href="test_31">日本語 ブロック</a></li>
                     <li class="list-group-item"><a href="test_30">English Block</a></li>
                 </ul>
