--- a/stages/test_31/index.html
+++ b/stages/test_31/index.html
@@ -20,7 +20,7 @@
 <body>
     <span id="top"></span>
     <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#"><strong>はしれ！ヘッポコード</strong></a>
+        <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong></a>
 
         <div>
             <a href="#top" type="button" class="btn btn-outline-light">
