Add Link to sourcec ode

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード - 只今工事中</strong></h1>
         <p class="text-muted"><strong>Heppocode running</strong></p>
         <p><a type="button" class="btn btn-success btn-lg" href="stages/"><strong>スタート</strong></a></p>
+        <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</p>
     </section>
 
     <!-- ===================== START FOOTER ===================== -->
