コース選択ページを整理

--- a/stages/index.html
+++ b/stages/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Yutaka Kachi">
 
-    <title>デモコース / Heppocode running</title>
+    <title>はしれ！ヘッポコード / コースメニュー</title>
 
     <!-- CSS -->
     <link href="../lib/bootstrap/4.0.0_b2/css/bootstrap.min.css" rel="stylesheet">
@@ -19,12 +19,27 @@
 
 <body>
     <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href=".."><strong>はしれ！ヘッポコード</strong></a>
+        <a class="navbar-brand" href=".."><strong>はしれ！ヘッポコード</strong> / コースメニュー</a>
     </nav>
     <div class="container">
         <div class="grid">
             <div class="col_12">
-                <h1>ステージ：</h1>
+                <h1>トレーニング</h1>
+                <ul class="list-group">
+                    <li class="list-group-item">ただいま、工事中</li>
+                </ul>
+                <p></p>
+                <h1>レーシング</h1>
+                <ul class="list-group">
+                    <li class="list-group-item">ただいま、工事中</li>
+                </ul>
+                <p></p>
+                <h1>フリースタイル</h1>
+                <ul class="list-group">
+                    <li class="list-group-item">ただいま、工事中</li>
+                </ul>
+                <p></p>
+                <h1>テストコース</h1>
                 <ul class="list-group">
                     <li class="list-group-item"><a href="test_20">マニュアル ドライブ</a></li>
                     <li class="list-group-item"><a href="test_31">日本語 ブロック</a></li>
