--- a/stages/test_31/index.html
+++ b/stages/test_31/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Heppocode Running">
     <meta name="author" content="Yutaka Kachi">
 
-    <title>はしれ！ヘッポコード/Heppocode Running</title>
+    <title>はしれ！ヘッポコード / テストコース</title>
 
     <!-- CSS -->
     <link href="../../lib/bootstrap/4.0.0_b2/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 <body>
     <span id="top"></span>
     <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong></a>
+        <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong> / テストコース</a>
 
         <div>
             <a href="#top" type="button" class="btn btn-outline-light">
