--- a/stages/test_30/index.html
+++ b/stages/test_30/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Heppocode Running">
     <meta name="author" content="Yutaka Kachi">
 
-    <title>Heppocode Running</title>
+    <title>Heppocode Running / Test Course</title>
 
     <!-- CSS -->
     <link href="../../lib/bootstrap/4.0.0_b2/css/bootstrap.min.css" rel="stylesheet">
@@ -20,16 +20,16 @@
 <body>
     <span id="top"></span>
     <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong></a>
+        <a class="navbar-brand" href="../.."><strong>Heppocode Running</strong> / Test Course</a>
 
         <div>
             <a href="#top" type="button" class="btn btn-outline-light">
                 <i class="fa fa-cog" aria-hidden="true"></i>
-                ステージ
+                Stage
             </a>
             <a href="#edit" type="button" class="btn btn-outline-light">
                 <i class="fa fa-pencil" aria-hidden="true"></i>
-                エディタ
+                Editor
             </a>
         </div>
     </nav>
