--- a/stages/test_31/index.html
+++ b/stages/test_31/index.html
@@ -49,10 +49,10 @@
                 <div class="col-xl">
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="blockly_block_tab" data-toggle="tab" href="#blockly_block" role="tab" aria-controls="blockly_block_tab" aria-selected="true">ブロック</a>
+                            <a class="nav-link active" id="blockly_block_tab" data-toggle="tab" href="#blockly_block" role="tab" aria-controls="blockly_block_tab" aria-selected="true"><strong>ブロック</strong></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="blockly_code_tab" data-toggle="tab" href="#blockly_code" role="tab" aria-controls="blockly_code_tab" aria-selected="false">コード</a>
+                            <a class="nav-link" id="blockly_code_tab" data-toggle="tab" href="#blockly_code" role="tab" aria-controls="blockly_code_tab" aria-selected="false"><strong>コード</strong></a>
                         </li>
                     </ul>
                     <div id="blocklyArea" class="flexbox">
@@ -82,7 +82,13 @@
 
     <xml id="toolbox" style="display: none">
         <category name="ロボット" colour="#ED225D">
-            <block type="start_comment"></block>
+            <block type="start_comment">
+                <value name="VALUE">
+                    <shadow type="text">
+                        <field name="TEXT">abc</field>
+                    </shadow>
+                </value>
+            </block>
             <block type="run_foward"></block>
             <block type="jump_forward"></block>
             <block type="is_ball"></block>
