ブロックの色と、コメントブロックの色

--- a/stages/test_30/index.html
+++ b/stages/test_30/index.html
@@ -396,9 +396,9 @@
         <variables></variables>
         <block type="start_comment" x="63" y="63">
             <value name="comment_string">
-              <block type="text">
-                <field name="TEXT">Loop these blocks</field>
-              </block>
+                <shadow type="text">
+                    <field name="TEXT">Loop these blocks</field>
+                </shadow>
             </value>
             <next>
                 <block type="controls_if">
