--- a/stages/test_31/index.html
+++ b/stages/test_31/index.html
@@ -397,9 +397,9 @@
         <variables></variables>
         <block type="start_comment" x="63" y="63">
             <value name="comment_string">
-              <block type="text">
-                <field name="TEXT">このブロックをループする</field>
-              </block>
+              <shadow type="text">
+                  <field name="TEXT">このブロックをループする ...</field>
+              </shadow>
             </value>
             <next>
                 <block type="controls_if">
