--- a/stages/test_30/index.html
+++ b/stages/test_30/index.html
@@ -11,7 +11,7 @@
     <title>Heppocode Running / Test Course</title>
 
     <!-- CSS -->
-    <link href="../../lib/bootstrap/4.0.0_b2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../lib/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="../../lib/highlight/highlight_default.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -428,12 +428,12 @@
     <!-- Javascript -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="../../lib/bootstrap/4.0.0_b2/js/jquery.min.js"><\/script>')
+        window.jQuery || document.write('<script src="../../lib/jquery-3.2.1.js"><\/script>')
     </script>
 
     <!-- bootstrap -->
-    <script src="../../lib/bootstrap/4.0.0_b2/js/popper.min.js"></script>
-    <script src="../../lib/bootstrap/4.0.0_b2/js/bootstrap.min.js"></script>
+    <script src="../../lib/bootstrap/4.0.0/js/popper.min.js"></script>
+    <script src="../../lib/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <!-- game engine -->
     <script src="../../lib/phaser2.8.8.min.js"></script>
