Chromeで、ツールバーのボタンデザインがおかしくなる

--- a/stages/test_30/index.html
+++ b/stages/test_30/index.html
@@ -20,17 +20,19 @@
 <body>
     <span id="top"></span>
     <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="../.."><strong>Heppocode Running</strong> / Test Course</a>
-
         <div>
-            <a href="#top" type="button" class="btn btn-outline-light">
+            <a class="navbar-brand" href="../.."><strong>Heppocode Running</strong></a>
+            <a class="navbar-brand" href="..">Test Course</a>
+        </div>
+        <div>
+            <button type="button" class="btn btn-outline-light" onclick="location.href='#'">
                 <i class="fa fa-cog" aria-hidden="true"></i>
-                Stage
-            </a>
-            <a href="#edit" type="button" class="btn btn-outline-light">
+                Course
+            </button>
+            <button type="button" class="btn btn-outline-light" onclick="location.href='#edit'">
                 <i class="fa fa-pencil" aria-hidden="true"></i>
                 Editor
-            </a>
+            </button>
         </div>
     </nav>
 
