--- a/stages/test_31/index.html
+++ b/stages/test_31/index.html
@@ -20,17 +20,19 @@
 <body>
     <span id="top"></span>
     <nav class="navbar navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong> / テストコース</a>
-
         <div>
-            <a href="#top" type="button" class="btn btn-outline-light">
+            <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong></a>
+            <a class="navbar-brand" href="..">テストコース</a>
+        </div>
+        <div>
+            <button type="button" class="btn btn-outline-light" onclick="location.href='#'">
                 <i class="fa fa-cog" aria-hidden="true"></i>
-                ステージ
-            </a>
-            <a href="#edit" type="button" class="btn btn-outline-light">
+                コース
+            </button>
+            <button type="button" class="btn btn-outline-light" onclick="location.href='#edit'">
                 <i class="fa fa-pencil" aria-hidden="true"></i>
                 エディタ
-            </a>
+            </button>
         </div>
     </nav>
 
