配色をポップにした

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     <!-- CSS -->
     <link href="lib/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/lumen/bootstrap.min.css" rel="stylesheet" integrity="sha384-0LGTKb8NPx8fBKaojW3qF+Qo2Yhhs/mBrVHMYjPV8V/o4ZAmZ1cpGI2OeQab16T2" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="lib/highlight/highlight_default.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-dark bg-primary fixed-top">
         <a class="navbar-brand" href="#"><strong>はしれ！ヘッポコード</strong></a>
     </nav>
 
@@ -26,7 +27,7 @@
         <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード - ただいま工事中</strong></h1>
         <p class="text-muted"><strong>Heppocode running</strong></p>
         <p><a type="button" class="btn btn-success btn-lg" href="stages/"><strong>スタート</strong></a></p>
-        <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</p>
+        <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</a></p>
     </section>
 
     <!-- ===================== START FOOTER ===================== -->
