--- a/stages/index.html
+++ b/stages/index.html
@@ -12,13 +12,14 @@
 
     <!-- CSS -->
     <link href="../lib/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../lib/bootstrap/4.0.0/css/bootstrap.lumen.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="../lib/highlight/highlight_default.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-dark bg-primary fixed-top">
         <a class="navbar-brand" href=".."><strong>はしれ！ヘッポコード</strong> / コースメニュー</a>
     </nav>
     <div class="container">
