--- a/stages/test_30/index.html
+++ b/stages/test_30/index.html
@@ -12,6 +12,7 @@
 
     <!-- CSS -->
     <link href="../../lib/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../lib/bootstrap/4.0.0/css/bootstrap.lumen.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="../../lib/highlight/highlight_default.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -19,17 +20,17 @@
 
 <body>
     <span id="top"></span>
-    <nav class="navbar navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-dark bg-primary fixed-top">
         <div>
             <a class="navbar-brand" href="../.."><strong>Heppocode Running</strong></a>
             <a class="navbar-brand" href="..">Test Course</a>
         </div>
         <div>
-            <button type="button" class="btn btn-outline-light" onclick="location.href='#'">
+            <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#'">
                 <i class="fa fa-cog" aria-hidden="true"></i>
                 Course
             </button>
-            <button type="button" class="btn btn-outline-light" onclick="location.href='#edit'">
+            <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#edit'">
                 <i class="fa fa-pencil" aria-hidden="true"></i>
                 Editor
             </button>
