配色を調整

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <section class="jumbotron text-center" >
         <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード - ただいま工事中</strong></h1>
         <p class="text-muted"><strong>Heppocode running</strong></p>
-        <p><a type="button" class="btn btn-success btn-lg" href="stages/"><strong>スタート</strong></a></p>
+        <p>
+            <button type="button" class="btn btn-warning btn-lg" onclick="location.href='stages/'"><strong>スタート</strong></button>
+        </p>
         <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</a></p>
     </section>
 
