表示デザインを変更

--- a/index.html
+++ b/index.html
@@ -23,14 +23,36 @@
         <a class="navbar-brand" href="#"><strong>はしれ！ヘッポコード</strong></a>
     </nav>
 
-    <section class="jumbotron text-center" >
-        <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード - ただいま工事中</strong></h1>
-        <p class="text-muted"><strong>Heppocode running</strong></p>
-        <p>
-            <button type="button" class="btn btn-warning btn-lg" onclick="location.href='stages/'"><strong>スタート</strong></button>
-        </p>
-        <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</a></p>
-    </section>
+    <div class="jumbotron">
+        <div class="container">
+            <img class="pull-left img-responsive" src="images/heppo_image.png" width="300" height="300" style='padding:0;margin:0 40px 40px 0;'>
+                <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード</strong> -
+                 ただいま工事中</h1>
+                <p class="text-muted"><strong>Heppocode running</strong></p>
+                <p></p>
+                <p>君のコードでロボットが走る。<br>
+                ライバルをけちらして、ゴールを目指せ。</p>
+                <p>
+                </p>
+                <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</a></p>
+                <br class='clearfix'>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <!-- Example row of columns -->
+        <div class="row">
+          <div class="col-md-4">
+            <p>ブロック型エディタで、<br>すばやくコードを組み立てろ</p>
+          </div>
+          <div class="col-md-4">
+            <p>横スクロール型コースで、<br>ロボットを走らせろ</p>
+          </div>
+          <div class="col-md-4">
+            <p>コースやライバルが、<br>どんどん増えるゾ</p>
+          </div>
+        </div>
 
     <!-- ===================== START FOOTER ===================== -->
     <div class="clear"></div>
