--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     <div class="jumbotron">
         <div class="container">
             <img class="pull-left img-responsive" src="images/heppo_image.png" width="300" height="300" style='padding:0;margin:0 40px 40px 0;'>
+            <div class="text-center">
                 <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード</strong> -
                  ただいま工事中</h1>
                 <p class="text-muted"><strong>Heppocode running</strong></p>
                 <p></p>
                 <p>君のコードでロボットが走る。<br>
                 ライバルをけちらして、ゴールを目指せ。</p>
+                <p></p>
                 <p>
+                    <button type="button" class="btn btn-warning btn-lg" onclick="location.href='stages/'"><strong> スタート »</strong></button>
                 </p>
                 <p><a href="https://github.com/ycatch/heppo-code-running">GitHub</a></p>
                 <br class='clearfix'>
@@ -44,12 +47,15 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
+            <h2><strong>組み立てる</strong></h2>
             <p>ブロック型エディタで、<br>すばやくコードを組み立てろ</p>
           </div>
           <div class="col-md-4">
+            <h2><strong>走らせる</strong></h2>
             <p>横スクロール型コースで、<br>ロボットを走らせろ</p>
           </div>
           <div class="col-md-4">
+            <h2><strong>共有する</strong></h2>
             <p>コースやライバルが、<br>どんどん増えるゾ</p>
           </div>
         </div>
