--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                  ただいま工事中</h1>
                 <p class="text-muted"><strong>Heppocode running</strong></p>
                 <p></p>
-                <p>君のコードでロボットが走る。<br>
-                ライバルをけちらして、ゴールを目指せ。</p>
+                <p>君のコードでロボットが走る。<br> ライバルをけちらして、ゴールを目指せ。
+                </p>
                 <p></p>
                 <p>
                     <button type="button" class="btn btn-warning btn-lg" onclick="location.href='stages/'"><strong> スタート »</strong></button>
@@ -46,38 +46,47 @@
     <div class="container">
         <!-- Example row of columns -->
         <div class="row">
-          <div class="col-md-4">
-            <h2><strong>組み立てる</strong></h2>
-            <p>ブロック型エディタで、<br>すばやくコードを組み立てろ</p>
-          </div>
-          <div class="col-md-4">
-            <h2><strong>走らせる</strong></h2>
-            <p>横スクロール型コースで、<br>ロボットを走らせろ</p>
-          </div>
-          <div class="col-md-4">
-            <h2><strong>共有する</strong></h2>
-            <p>コースやライバルが、<br>どんどん増えるゾ</p>
-          </div>
-        </div>
-
-    <!-- ===================== START FOOTER ===================== -->
-    <div class="clear"></div>
-    <div id="footer" class="clearfix">
-        <div class="grid">
-            <div class="col_12">
-                Copyright 2018 Yutaka Kachi All Rights Reserved.
+            <div class="col-md-4">
+                <div class="mx-auto text-center">
+                    <img class="img-responsive" src="images/p1b.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <h2><strong>組み立てる</strong></h2>
+                    <p>ブロック型エディタで<br>コードを組み立て</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="mx-auto text-center">
+                    <img class="img-responsive" src="images/p2b.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <h2><strong>走らせる</strong></h2>
+                    <p>横スクロール型コースで<br>ロボットを走らせろ</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="mx-auto text-center">
+                    <img class="img-responsive" src="images/p3b.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <h2><strong>共有する</strong></h2>
+                    <p>コースやライバルが<br>どんどん増えるゾ</p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Javascript -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="lib/jquery-3.2.1.js"><\/script>')
-    </script>
-    <!-- bootstrap -->
-    <script src="lib/bootstrap/4.0.0/js/popper.min.js"></script>
-    <script src="lib/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <!-- ===================== START FOOTER ===================== -->
+        <div class="clear"></div>
+        <div id="footer" class="clearfix">
+            <div class="grid">
+                <div class="col_12">
+                    Copyright 2018 Yutaka Kachi All Rights Reserved.
+                </div>
+            </div>
+        </div>
+
+        <!-- Javascript -->
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script>
+            window.jQuery || document.write('<script src="lib/jquery-3.2.1.js"><\/script>')
+        </script>
+        <!-- bootstrap -->
+        <script src="lib/bootstrap/4.0.0/js/popper.min.js"></script>
+        <script src="lib/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
