--- a/stages/index.html
+++ b/stages/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Yutaka Kachi">
 
-    <title>はしれ！ヘッポコード / コースメニュー</title>
+    <title>はしれ！ヘッポコード / ステージメニュー</title>
 
     <!-- CSS -->
     <link href="../lib/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -19,9 +19,29 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-primary fixed-top">
-        <a class="navbar-brand" href=".."><strong>はしれ！ヘッポコード</strong> / コースメニュー</a>
-    </nav>
+    <div class="bs-component">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+            <a class="navbar-brand" href="../index.html"><strong>はしれ！ヘッポコード</strong></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">ホーム <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">ステージ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../tech.html">テクノロジ</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
     <div class="container">
         <div class="grid">
             <div class="col_12">
