--- a/tech.html
+++ b/tech.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Yutaka Kachi">
 
-    <title>はしれ！ヘッポコード / Heppocode running</title>
+    <title>テクノロジ - はしれ！ヘッポコード / Heppocode running</title>
 
     <!-- CSS -->
     <link href="lib/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
@@ -21,21 +21,21 @@
 <body>
     <div class="bs-component">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-            <a class="navbar-brand" href="./index.html"><strong>はしれ！ヘッポコード</strong></a>
+            <a class="navbar-brand" href="/"><strong>はしれ！ヘッポコード</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
 
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">ホーム <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html">ホーム <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="stages/">ステージ</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./tech.html">テクノロジ</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">テクノロジ</a>
                     </li>
                 </ul>
             </div>
