テクノロジページを追加、ナビゲーションを調整

--- a/stages/test_20/index.html
+++ b/stages/test_20/index.html
@@ -21,19 +21,21 @@
 <body>
     <span id="top"></span>
     <nav class="navbar navbar-dark bg-primary fixed-top">
-        <div>
-            <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong></a>
-            <a class="navbar-brand" href="..">テストコース</a>
-        </div>
-        <div>
-            <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#'">
+        <div class="container">
+            <div>
+                <a class="navbar-brand" href="../.."><strong>はしれ！ヘッポコード</strong></a>
+                <a class="navbar-brand" href="..">テストコース</a>
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#'">
                 <i class="fa fa-cog" aria-hidden="true"></i>
                 コース
             </button>
-            <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#edit'">
+                <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#edit'">
                 <i class="fa fa-pencil" aria-hidden="true"></i>
                 エディタ
             </button>
+            </div>
         </div>
     </nav>
 
