--- a/stages/test_30/index.html
+++ b/stages/test_30/index.html
@@ -21,19 +21,21 @@
 <body>
     <span id="top"></span>
     <nav class="navbar navbar-dark bg-primary fixed-top">
-        <div>
-            <a class="navbar-brand" href="../.."><strong>Heppocode Running</strong></a>
-            <a class="navbar-brand" href="..">Test Course</a>
-        </div>
-        <div>
-            <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#'">
-                <i class="fa fa-cog" aria-hidden="true"></i>
-                Course
-            </button>
-            <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#edit'">
-                <i class="fa fa-pencil" aria-hidden="true"></i>
-                Editor
-            </button>
+        <div class="container">
+            <div>
+                <a class="navbar-brand" href="../.."><strong>Heppocode Running</strong></a>
+                <a class="navbar-brand" href="..">Test Course</a>
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#'">
+                    <i class="fa fa-cog" aria-hidden="true"></i>
+                    Course
+                </button>
+                <button type="button" class="btn btn-outline-light btn-lg" onclick="location.href='#edit'">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                    Editor
+                </button>
+            </div>
         </div>
     </nav>
 
