3つの特徴、アイコン変更

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="mx-auto text-center">
-                    <img class="img-responsive" src="images/p1b.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <img class="img-responsive" src="images/p1.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
                     <h2><strong>組み立てる</strong></h2>
                     <p>ブロック型エディタで<br>コードを組み立て</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mx-auto text-center">
-                    <img class="img-responsive" src="images/p2b.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <img class="img-responsive" src="images/p2.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
                     <h2><strong>走らせる</strong></h2>
                     <p>横スクロール型コースで<br>ロボットを走らせろ</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mx-auto text-center">
-                    <img class="img-responsive" src="images/p3b.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
-                    <h2><strong>共有する</strong></h2>
+                    <img class="img-responsive" src="images/p3.png" width="180" height="180" style='padding:0;margin:0 10px 10px 0;'>
+                    <h2><strong>競争する</strong></h2>
                     <p>コースやライバルが<br>どんどん増えるゾ</p>
                 </div>
             </div>
