スタイルシートを共通化

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/lumen/bootstrap.min.css" rel="stylesheet" integrity="sha384-0LGTKb8NPx8fBKaojW3qF+Qo2Yhhs/mBrVHMYjPV8V/o4ZAmZ1cpGI2OeQab16T2" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="lib/highlight/highlight_default.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="lib/common.css" rel="stylesheet">
 </head>
 
 <body>
