--- a/tech.html
+++ b/tech.html
@@ -15,7 +15,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/lumen/bootstrap.min.css" rel="stylesheet" integrity="sha384-0LGTKb8NPx8fBKaojW3qF+Qo2Yhhs/mBrVHMYjPV8V/o4ZAmZ1cpGI2OeQab16T2" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="lib/highlight/highlight_default.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="lib/common.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,16 +42,21 @@
         </div>
     </nav>
 
+    <div class="jumbotron">
+        <div class="container">
+
+            <h1>テクノロジ</h1>
+            <p>ここでは、ヘッポコードで利用している、ライブラリやツールについて紹介します。</p>
+            <p></p>
+        </div>
+    </div>
+    
+
     <div class="container">
         <div class="grid">
             <div class="col_12">
-                <h1>テクノロジ</h1>
-                <p>ここでは、ヘッポコードで利用している、ライブラリやツールについて紹介します。</p>
-
-                <br>
-                <br>
                 <div class="post rad_corner">
-                <h2 class="dot rad_corner">ソフトウェアライブラリ</h2>
+                    <h2 class="dot rad_corner">ソフトウェアライブラリ</h2>
                     <h3 id="phaser.js">phaser.js</h3>
                     <p>ゲームエンジン</p>
                     <p>The MIT License (MIT)</p>
@@ -97,8 +102,6 @@
                     </p>
                 </div>
 
-                <br>
-                <br>
                 <div class="post rad_corner">
                     <h2 class="dot rad_corner">ツール</h2>
 
@@ -115,8 +118,6 @@
                     </p>
                 </div>
 
-                <br>
-                <br>
                 <div class="post rad_corner">
                     <h2 class="rad_corner dot">マテリアル</h2>
 
@@ -143,8 +144,6 @@
                     </p>
                 </div>
 
-                <br>
-                <br>
                 <div class="post rad_corner">
                     <h2 class="rad_corner dot">オープンソース</h2>
 
