--- a/stages/index.html
+++ b/stages/index.html
@@ -15,7 +15,7 @@
     <link href="../lib/bootstrap/4.0.0/css/bootstrap.lumen.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="../lib/highlight/highlight_default.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="../lib/common.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,6 +41,12 @@
             </div>
         </div>
     </nav>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>ステージ</h1>
+            <p>チャレンジするコースをえらぼう！</p>
+        </div>
+    </div>
 
     <div class="container">
         <div class="grid">
