ステージページの調整、ナビゲーションデザインの調整

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="text-center">
                 <h1 class="jumbotron-heading"><strong>はしれ！ヘッポコード</strong> -
                  ただいま工事中</h1>
-                <p class="text-muted"><strong>Heppocode running</strong></p>
+                <p class="h2 text-muted"><strong>Heppocode running</strong></p>
                 <p></p>
-                <p>君のコードでロボットが走る。<br> ライバルをけちらして、ゴールを目指せ。
+                <p class="lead">君のコードでロボットが走る。<br> ライバルをけちらして、ゴールを目指せ。
                 </p>
                 <p></p>
                 <p>
