--- a/tech.html
+++ b/tech.html
@@ -46,11 +46,11 @@
         <div class="container">
 
             <h1>テクノロジ</h1>
-            <p>ここでは、ヘッポコードで利用している、ライブラリやツールについて紹介します。</p>
+            <p class="lead">ヘッポコードで利用している、ライブラリやツールについて紹介します。</p>
             <p></p>
         </div>
     </div>
-    
+
 
     <div class="container">
         <div class="grid">
@@ -83,7 +83,7 @@
                         <a href='https://github.com/twbs/bootstrap' target='_blank'>https://github.com/twbs/bootstrap</a>
                     </p>
 
-                    <h3 id="bootstrap">Bootswatch</h3>
+                    <h3 id="Bootswatch">Bootswatch</h3>
                     <p>Bootstrap テーマテンプレート</p>
                     <p>The MIT License (MIT)</p>
                     <p>Copyright 2014-2018 Thomas Park</p>
