--- a/stages/index.html
+++ b/stages/index.html
@@ -16,6 +16,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="../lib/highlight/highlight_default.css" rel="stylesheet">
     <link href="../lib/common.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,56 +45,58 @@
     <div class="jumbotron">
         <div class="container">
             <h1>ステージ</h1>
-            <p>チャレンジするコースをえらぼう！</p>
+            <p class="lead">チャレンジするコースをえらぼう！</p>
         </div>
     </div>
 
     <div class="container">
         <div class="grid">
             <div class="col_12">
-                <h1>トレーニング</h1>
-                <ul class="list-group">
-                    <li class="list-group-item">ただいま、工事中</li>
-                </ul>
-                <p></p>
-                <h1>レーシング</h1>
-                <ul class="list-group">
-                    <li class="list-group-item">ただいま、工事中</li>
-                </ul>
-                <p></p>
-                <h1>フリースタイル</h1>
-                <ul class="list-group">
-                    <li class="list-group-item">ただいま、工事中</li>
-                </ul>
-                <p></p>
-                <h1>テストコース</h1>
-                <ul class="list-group">
-                    <li class="list-group-item"><a href="test_20">マニュアル ドライブ</a></li>
-                    <li class="list-group-item"><a href="test_31">日本語 ブロック</a></li>
-                    <li class="list-group-item"><a href="test_30">English Block</a></li>
-                </ul>
+                <div class="post rad_corner">
+                    <h2 class="dot rad_corner">トレーニング</h2>
+                    <h3>ただいま、工事中</h3>
+                    <p></p>
+                </div>
+
+                <div class="post rad_corner">
+                    <h2 class="dot rad_corner">テストコース</h2>
+                        <h3><a href="test_20">マニュアル ドライブ</a></h3>
+                        <h3><a href="test_31">日本語 ブロック</a></h3>
+                        <h3><a href="test_30">English Block</a></h3>
+                </div>
+
+                <div class="post rad_corner">
+                    <h2 class="dot rad_corner">レーシング</h2>
+                    <h3>ただいま、工事中</h3>
+                    <p></p>
+                </div>
+
+                <div class="post rad_corner">
+                    <h2 class="dot rad_corner">フリースタイル</h2>
+                    <h3>ただいま、工事中</h3>
+                    <p></p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- ===================== START FOOTER ===================== -->
-    <div class="clear"></div>
-    <div id="footer" class="clearfix">
-        <div class="grid">
-            <div class="col_12">
-                Copyright 2018 Yutaka Kachi All Rights Reserved.
+        <!-- ===================== START FOOTER ===================== -->
+        <div class="clear"></div>
+        <div id="footer" class="clearfix">
+            <div class="grid">
+                <div class="col_12">
+                    Copyright 2018 Yutaka Kachi All Rights Reserved.
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Javascript -->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="../lib/jquery-3.2.1.js"><\/script>')
-    </script>
-    <!-- bootstrap -->
-    <script src="../lib/bootstrap/4.0.0/js/popper.min.js"></script>
-    <script src="../lib/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <!-- Javascript -->
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script>
+            window.jQuery || document.write('<script src="../lib/jquery-3.2.1.js"><\/script>')
+        </script>
+        <!-- bootstrap -->
+        <script src="../lib/bootstrap/4.0.0/js/popper.min.js"></script>
+        <script src="../lib/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
